--- a/index.html
+++ b/index.html
@@ -26,10 +26,16 @@
                 const suffix = parts[1];
 
                 // 修改这里的URL为你的Vercel Serverless Function的路径
-                const response = await fetch(`/api/whois?name=${name}&suffix=${suffix}`);
+                const apiUrl = `/api/whois?name=${name}&suffix=${suffix}`;
+
+                console.log('Requesting:', apiUrl);
+
+                const response = await fetch(apiUrl);
+
+                console.log('Response:', response);
 
                 if (!response.ok) {
-                    throw new Error(`Fetch failed with status ${response.status}`);
+                    throw new Error(`Error: Fetch failed with status ${response.status}`);
                 }
 
                 const responseData = await response.json();
